# tmpSensor_usb

./: .gitignore  pyproject.toml  readme.md  readme.txt
tmplab1/: tmp.py
tmplab1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tmplab1/log/AAAAAAAAndreNoives/: temperature_log_18h-41min-01s.csv
tmplab1/log/AndreNeves/: temperature_log_18h-36min-34s.csv
tmplab1/log/E/: temperature_log_19h-37min-55s.csv  temperature_log_20h-02min-47s.csv
tmplab1/log/EE/: temperature_log_19h-39min-49s.csv
tmplab1/log/EEE/: temperature_log_19h-42min-35s.csv
tmplab1/log/EEEE/: temperature_log_19h-46min-26s.csv
tmplab1/log/EEEEEE/: temperature_log_19h-47min-13s.csv
tmplab1/log/EEEEEEEE/: temperature_log_19h-48min-03s.csv
tmplab1/log/JoseSousa/: temperature_log_19h-48min-57s.csv
tmplab1/log/NevesAndre/: temperature_log_18h-38min-09s.csv
tmplab1/log/aaa/: temperature_log_19h-18min-42s.csv
tmplab1/log/ahh/: temperature_log_18h-54min-01s.csv
tmplab1/log/aoskd/: temperature_log_19h-32min-36s.csv
tmplab1/log/asasd/: temperature_log_19h-16min-15s.csv
tmplab1/log/i/: temperature_log_19h-15min-45s.csv  temperature_log_19h-36min-30s.csv
tmplab1/log/jjjjja/: temperature_log_18h-47min-46s.csv
tmplab1/log/jjjjjajajajjjjjjjjjjjjj/: temperature_log_19h-31min-13s.csv
tmplab1/log/jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjje/: temperature_log_19h-07min-09s.csv
tmplab1/log/jjjjjjjjose/: temperature_log_18h-39min-46s.csv
tmplab1/log/k/: temperature_log_19h-07min-57s.csv
tmplab1/log/kaka/: temperature_log_19h-14min-11s.csv
(+8 files in other folders)
